--- a/.github/workflows/BuildPipeline.yml
+++ b/.github/workflows/BuildPipeline.yml
@@ -19,3 +19,31 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+
+   DeployDev:
+    name: Deploy to Dev 
+    runs-on: ubuntu-latest
+    environment: 
+      name: dev
+    steps:
+      - name: Deploy
+        run: echo I am deploying! 
+
+  DeployStagging:
+    name: Deploy to Stagging
+    runs-on: ubuntu-latest
+    environment: 
+      name: stagging
+    steps:
+      - name: Deploy
+        run: echo I am deploying in stagging!  
+
+  DeployProduction:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    environment: 
+      name: prod
+    steps:
+      - name: Deploy
+        run: echo I am deploying in Product!       
