--- a/.github/workflows/buildpipeline.yml
+++ b/.github/workflows/buildpipeline.yml
@@ -32,7 +32,7 @@ jobs:
   Stag:
     name: Deploy to Stagging
     runs-on: ubuntu-latest
-    needs: build
+    needs: Dev
     environment: 
       name: stagging
     steps:
@@ -42,7 +42,7 @@ jobs:
   Production:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: build
+    needs: Stag
     environment: 
       name: prod
     steps:
