--- a/.github/workflows/buildpipeline.yml
+++ b/.github/workflows/buildpipeline.yml
@@ -28,7 +28,26 @@ jobs:
     steps:
       - name: Deploy
         run: echo I am deploying! 
-  
+  SIT:
+    name: Deploy to SIT 
+    runs-on: ubuntu-latest
+    needs: build
+    environment: 
+       name: sit
+    steps:
+      - name: Deploy
+        run: echo I am deploying in SIT!
+
+  UAT:
+    name: Deploy to UAT 
+    runs-on: ubuntu-latest
+    needs: build
+    environment: 
+       name: uat
+    steps:
+      - name: Deploy
+        run: echo I am deploying in UAT!      
+        
   Stag:
     name: Deploy to Stagging
     runs-on: ubuntu-latest
