--- a/.github/workflows/webapibuild.yml
+++ b/.github/workflows/webapibuild.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3.5.3
       - name: Setup .net
-        uses: action/setup-dotnet@v3
+        uses: actions/setup-dotnet@v3
         with:
             dotnet-version: 6.0.x
   
