--- a/.github/workflows/webapibuild.yml
+++ b/.github/workflows/webapibuild.yml
@@ -23,13 +23,13 @@ jobs:
         run: dotnet build --no-restore
   
       - name: dotnet publish
-        run: dotnet publish -c release -o ${{env.DOTNET_ROOT}}/githubpocapi
+        run: dotnet publish GitHubPocWebAPI/GitHubPocWebAPI/GitHubPocWebAPI.csproj -c release -o ${{env.DOTNET_ROOT}}/githubpocapi
   
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3.1.2
         with:
           name: githubpoc.api
-          path: ${{env.DOTNET_ROOT}}/githubpocapi
+          path: ${{env.DOTNET_ROOT}}/githubpocapi/**
 
   Developement:
     runs-on: ubuntu-latest
