--- a/.github/workflows/webapibuild.yml
+++ b/.github/workflows/webapibuild.yml
@@ -29,20 +29,22 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/githubpocapi/**
 
   Developement:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
+    environment: dev
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with: 
-          name: githubpoc.api
-          
-      - name: Deploy to Dev
-        run: echo I am deploying!
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with: 
+        name: githubpoc.api
+    
+    - name: Deploy to Dev
+      run: echo I am deploying!
         
   SIT:
     runs-on: ubuntu-latest
     needs: build
+    environment: sit
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -55,6 +57,7 @@ jobs:
   UAT:
       runs-on: ubuntu-latest
       needs: SIT
+      environment: uat
       steps:
         - name: Download artifact from build job
           uses: actions/download-artifact@v3
@@ -67,6 +70,7 @@ jobs:
   STAG:
       runs-on: ubuntu-latest
       needs: UAT
+      environment: stagging
       steps:
         - name: Download artifact from build job
           uses: actions/download-artifact@v3
@@ -79,6 +83,7 @@ jobs:
   PROD:
       runs-on: ubuntu-latest
       needs: STAG
+      environment: prod
       steps:
         - name: Download artifact from build job
           uses: actions/download-artifact@v3
