--- a/.github/workflows/buildpipeline.yml
+++ b/.github/workflows/buildpipeline.yml
@@ -41,7 +41,7 @@ jobs:
   UAT:
     name: Deploy to UAT 
     runs-on: ubuntu-latest
-    needs: SIT
+    needs: [SIT,Dev]
     environment: 
        name: uat
     steps:
